; ModuleID = '/home/carl/AnghaBench/jerryscript/targets/esp8266/user/extr_jerry_extapi.c_register_native_function.c'
source_filename = "/home/carl/AnghaBench/jerryscript/targets/esp8266/user/extr_jerry_extapi.c_register_native_function.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [42 x i8] c"!!! create_external_function failed !!!\0D\0A\00", align 1
@.str.1 = private unnamed_addr constant [44 x i8] c"!!! register_native_function failed: [%s]\0D\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32)* @register_native_function to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @register_native_function(i8* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  %11 = call i32 (...) @jerry_get_global_object()
  store i32 %11, i32* %6, align 4
  %12 = load i32, i32* %5, align 4
  %13 = call i32 @jerry_create_external_function(i32 %12)
  store i32 %13, i32* %7, align 4
  store i32 1, i32* %8, align 4
  %14 = load i32, i32* %7, align 4
  %15 = call i64 @jerry_value_is_function(i32 %14)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %21

17:                                               ; preds = %2
  %18 = load i32, i32* %7, align 4
  %19 = call i64 @jerry_value_is_constructor(i32 %18)
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %27, label %21

21:                                               ; preds = %17, %2
  %22 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str, i64 0, i64 0))
  %23 = load i32, i32* %7, align 4
  %24 = call i32 @jerry_release_value(i32 %23)
  %25 = load i32, i32* %6, align 4
  %26 = call i32 @jerry_release_value(i32 %25)
  store i32 0, i32* %3, align 4
  br label %52

27:                                               ; preds = %17
  %28 = load i8*, i8** %4, align 8
  %29 = bitcast i8* %28 to i32*
  %30 = call i32 @jerry_create_string(i32* %29)
  store i32 %30, i32* %9, align 4
  %31 = load i32, i32* %6, align 4
  %32 = load i32, i32* %9, align 4
  %33 = load i32, i32* %7, align 4
  %34 = call i32 @jerry_set_property(i32 %31, i32 %32, i32 %33)
  store i32 %34, i32* %10, align 4
  %35 = load i32, i32* %7, align 4
  %36 = call i32 @jerry_release_value(i32 %35)
  %37 = load i32, i32* %6, align 4
  %38 = call i32 @jerry_release_value(i32 %37)
  %39 = load i32, i32* %9, align 4
  %40 = call i32 @jerry_release_value(i32 %39)
  %41 = load i32, i32* %10, align 4
  %42 = call i64 @jerry_value_is_error(i32 %41)
  %43 = icmp ne i64 %42, 0
  br i1 %43, label %44, label %49

44:                                               ; preds = %27
  %45 = load i8*, i8** %4, align 8
  %46 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str.1, i64 0, i64 0), i8* %45)
  %47 = load i32, i32* %10, align 4
  %48 = call i32 @jerry_release_value(i32 %47)
  store i32 0, i32* %3, align 4
  br label %52

49:                                               ; preds = %27
  %50 = load i32, i32* %10, align 4
  %51 = call i32 @jerry_release_value(i32 %50)
  store i32 1, i32* %3, align 4
  br label %52

52:                                               ; preds = %49, %44, %21
  %53 = load i32, i32* %3, align 4
  ret i32 %53
}

declare dso_local i32 @jerry_get_global_object(...) #1

declare dso_local i32 @jerry_create_external_function(i32) #1

declare dso_local i64 @jerry_value_is_function(i32) #1

declare dso_local i64 @jerry_value_is_constructor(i32) #1

declare dso_local i32 @printf(i8*, ...) #1

declare dso_local i32 @jerry_release_value(i32) #1

declare dso_local i32 @jerry_create_string(i32*) #1

declare dso_local i32 @jerry_set_property(i32, i32, i32) #1

declare dso_local i64 @jerry_value_is_error(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
